Fix spacing for modal radios and i18n for update server

--- a/frontend/public/components/modals/_modals.scss
+++ b/frontend/public/components/modals/_modals.scss
@@ -144,3 +144,7 @@
     margin-bottom: 24px;
   }
 }
+
+.configure-upstream-modal .modal-body .radio+.radio{
+  margin-top: var(--pf-global--spacer--md);
+}
